syntax = "proto3";

package app;

service PushNotification {
    rpc SendNotification (NotificationData) returns (NotificationResult) {}
}

message NotificationData {
    string message = 1;
    string code = 2;
    string payload = 3; // json string
}

message NotificationResult {
    bool success = 1;
}